--- a/newProject/Jenkinsfile
+++ b/newProject/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     stage('Build') {
       steps {
 				// Java 파일들을 컴파일하여 생성된 클래스 파일을 classes 디렉토리에 저장
-				bat 'javac -encoding UTF-8 -d classes newProject/src/*.java'
+				bat 'javac -encoding UTF-8 -d classes newProject/src/**/*.java'
       }
     }
     stage('Test') {
